# i3drsgm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  install_3rdparty.bat  package.bat
.github/workflows/: build.yml
cmake/: FindPhobosIntegration.cmake  Findi3drsgm.cmake
include/: i3drsgm.h  i3drsgmExport.h  stereosupport.hpp
params/: i3drsgm.param
py/: README.md  cvtypes.py  pclsamples.py  pyi3drsgm.py  requirements.txt  stereosupport.py
resources/: left.xml  right.xml  st_left.yaml  st_right.yaml  stereo.xml
resources/broken/: right_calibration.xml  stereo_calibration.xml
scripts/: build.bat  build_py.bat  install_3rdparty.bat  install_i3drsgm.bat  install_i3drsgm.template  package.bat  run.bat  update_install_script.bat
src/: I3DRSGMSharp.cs  I3DRSGMSharpApp.cs  i3drsgm.cpp  i3drsgm.h  i3drsgmApp.cpp  matcheri3drsgm.cpp  matcheri3drsgm.h  matcherjrsgm.cpp  matcherjrsgm.h  matcherjrsgm2.cpp  matcherjrsgm2.h  matcherjrsgm3.cpp  matcherjrsgm3.h  matcherwidgeti3drsgm.cpp  matcherwidgeti3drsgm.h  matcherwidgeti3drsgm.ui  matcherwidgetjrsgm.cpp  matcherwidgetjrsgm.h  matcherwidgetjrsgm.ui
src/archive/: matcherjrsgm2.cpp  matcherjrsgm2.h  matcherjrsgm3.cpp  matcherjrsgm3.h
